# KirigiriHonkaku

./: .env.example  .gitignore  AGENTS.md  alembic.ini  compose.yaml  main.py  pyproject.toml  requirements.txt  test_main.http
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
alembic/: env.py
alembic/versions/: 20260402_0001_backend_foundation.py  20260403_0002_step3_main_loop_keys.py  20260403_0003_step5_risk_and_endgame.py  20260405_0004_step6_content_expansion.py  20260406_0005_agent_generation_title_nullable.py  20260407_0006_npc_has_met_player.py  20260408_0007_move_text_artifacts_into_database.py  20260408_0008_board_item_title_content.py
app/: __init__.py  main.py
app/ai/: __init__.py  game_generation.py  runtime.py
app/core/: config.py
app/db/: base.py  session.py  types.py
app/engine/: __init__.py  service.py
app/models/: __init__.py  character.py  clue.py  common.py  dialogue.py  event.py  map.py  session.py
app/repositories/: clue_repository.py  dialogue_repository.py  event_repository.py  map_repository.py  npc_repository.py  player_repository.py  session_repository.py  uow.py
app/schemas/: action.py  board.py  health.py  session.py  world_generation.py
app/seeds/: __init__.py  world.py
app/services/: __init__.py  board.py  board_auto_sync.py  narrative.py  (+2 more)
docs/: ACCUSATION_SPEC.md  CLUE_SPEC.md  DIALOGUE_SPEC.md  EXPOSURE_SPEC.md  MAP_SPEC.md  NPC_SPEC.md  PLAYER_SPEC.md  STORAGE_SPEC.md  TRUTH_SPEC.md
tests/: conftest.py  game_generation_fakes.py
(+54 files in other folders)
