[project]
name = "kirigiri-honkaku"
version = "0.1.0"
description = "Kirigiri Honkaku backend foundation"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "fastapi>=0.115.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.8.0",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
test = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*", "alembic*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
